<대량수정> 1.검색페이지 - 검색내용이 없을때 나오는 문구 정상작동하게 수정 - 작가버튼에서는 '작가'만 검색되도록 수정 - 검색시 bo_lock=1만 검색되도록 수정(비공개글 안나옴) (조인문에서는 where이아닌 on문에 써줘야됨)
2. 글읽기에서 신고하기 버튼
- 신고하기 버튼 header로 이동
- 내글에서는 나타나지 않음
- 로그인 안되있을 시 신고막음 -> 로그인 페이지로 이동시킴
- 댓글 신고하기 기능 추가 (관리자 페이지에서도 댓글신고되었음을 확인가능 : state=3/color:Green)

3. 글읽기
- 비공개글 접속시 본인아니면 차단 (이전페이지 이동)
- 프로필 사진이 제대로 나오게 수정
- 작가의 다른글의 title사진 크기를 고정시킴

4. 최신글
- 비공개글 제외하고 나타나게 수정

5. 메뉴
- title글씨체 추가
- Category에 title 추가
- 다른 페이지에서 스크롤바만큼 빈공간 나오던 것 수정

6. 로그인
-mem_state=1일때 정지된 계정임을 알려주고 문의하기를 통해 이유를 알 수 있도록 문구 띄움

7. 책생성 페이지
- 글의 비공개/공개 상태 아이콘 추가
- 책 모형 수정
- 메인,검색,책발간의 책모양 및 글씨 정렬을 통일시킴
- '브런치북 소개' -> '자몽 책 소개'로 변경

--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -79,12 +79,16 @@ a {
 }
 
 #book_create_cover_title {
-	display: block;
+	font-family: 'NanumMyeongjo','serif';
+    display: table-cell;
+    vertical-align: middle;
+	width: 170px;
+	height: 160px;
+	line-height: 35px;
 	margin: 0;
 	padding: 0px 15px;
-	padding-top: 30px;
-	font-size: 23px;
-	height: 150px;
+	padding-top: 20px;
+	font-size: 22px;
 }
 
 #book_create_cover_title:empty::before {
@@ -102,9 +106,10 @@ a {
 	display: block;
 	margin: 0;
 	padding: 0 15px;
+	padding-top: 10px;
 	height: 40px;
 	font-size: 16px;
-	line-height: 40px;
+	line-height: 40px;	
 }
 
 #book_create_cover_bot {
@@ -127,7 +132,7 @@ a {
 	height: 100%;
 }
 
-#book_creat_cover_list:after {
+#book_create_cover_line:after {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -137,7 +142,7 @@ a {
 	content: '';
 }
 
-#book_create_cover_list:before {
+#book_create_cover_line:before {
 	position: absolute;
 	top: 0;
 	right: 2px;
@@ -327,6 +332,22 @@ a {
 	cursor: pointer;
 	text-align: center;
 	line-height: 30px;
+	display:flex;
+}
+
+.post_list_lock{
+	display:inline;
+	width:20px;
+	height:20px;
+}
+.post_list_lock_img{
+	width:20px;
+	height:20px;
+	padding-top: 4px;
+}
+
+.post_list_cont_title{
+	width: 332px;
 }
 
 input[type="checkbox"] {
