--- a/src/main/webapp/resources/css/m.css
+++ b/src/main/webapp/resources/css/m.css
@@ -121,8 +121,8 @@ body{
 }
 /*우측사이드창 - wrap*/
 #head-menu-close-wrap{
-	width:63px;
-	min-width:63px;
+	width:80px;
+	min-width:80px;
 }
 #head-page-besthot-wrap{
 	width:calc(43.24vw - 140px);
@@ -162,12 +162,25 @@ body{
 	font-size:20px;
 	color:#fff;
 }
+#head-page-category-title{
+	height:40px;
+	text-align:center;
+	font-size:20px;
+	color:#fff;
+}
+
 #head-page-best-title strong{
+	font-family: 'NanumMyeongjo','serif';
 	line-height:40px;
 }
 #head-page-notice-title strong{
+	font-family: 'NanumMyeongjo','serif';
 	margin-left: 40px;
 	line-height: 40px;
+}
+#head-page-category-title strong{
+	font-family: 'NanumMyeongjo','serif';
+	line-height:40px;
 }
 
 #head-page-notice-title a{
@@ -386,11 +399,14 @@ body{
 #head-page-category-frame{
 	width:calc(56.76vw - 180px);
 	min-width:376px;
+	max-width: 950px;
 	height:480px;
 	margin:10px 20px;
 	display:flex;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
+    align-content: center;
 }
 #head-page-category-list{
 	list-style: none;
@@ -406,6 +422,8 @@ body{
 	height: calc(7.55vw - 10px);
 	min-width: 67px;
 	min-height: 67px;
+	max-width:180px;
+	max-height:180px;
 	margin:2.5px;
 	display:flex;
 	justify-content: center;
@@ -417,6 +435,8 @@ body{
 	height: calc(7.55vw - 10px);
 	min-width: 67px;
 	min-height: 67px;
+	max-width:180px;
+	max-height:180px;
 	cursor:pointer;
 	display:inline-block;
 	line-height:calc(7.55vw - 10px);
@@ -637,12 +657,14 @@ body{
 
 .book-item-head-inner-cont-top strong{
 	font-family: 'NanumMyeongjo','serif';
-    display: block;
+    display: table-cell;
+    vertical-align:middle;
+    width:160px;
     margin: 0;
     padding: 0px 10px;
-    padding-top: 30px;
-    font-size: 23px;
-    height: 150px;
+    padding-top: 20px;
+    font-size: 22px;
+    height: 160px;
 }
 
 .book-item-head-inner-cont-top span{
@@ -867,6 +889,7 @@ body{
 	display:flex;
 	flex-wrap:wrap;
 	justify-content: center;
+	align-content: flex-start;
 	padding-left:0;
 }
 .recom_author-item{
