많은 수정 -책은 더이상 수정 불가능, 책 삭제 버튼 추가 - 피드 비로그인 유효성 검증 - 책생성시에 경고문구 추가중

--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -186,6 +186,9 @@ body a {
 .author_img {
 	border-radius:100px;
 	float:right;
+	width:90px;
+	height:90px;
+	object-fit: cover;
 }
 
 .author_keyword {
