--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -16,6 +16,7 @@ a {
 #book_create_base {
 	width: 940px;
 	margin: 0 auto;
+	margin-top: 100px;
 }
 
 .ui-sortable {
@@ -26,10 +27,24 @@ a {
 	box-shadow: 4px 4px 7px #c0c0c0;
 }
 
+#book_create_announce{
+	height:50px;
+	display:flex;
+}
+
+#book_create_anno_img{
+	width:25px;
+	height:25px;
+	object-fit:cover;
+}
+
+#book_create_anno_cont{
+	
+}
+
 #book_create_info {
 	display: flex;
 	width: 940px;
-	margin-top: 100px;
 }
 
 /* 책 커버 */
