--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -34,7 +34,7 @@ a {
 
 /* 책 커버 */
 #book_create_cover {
-	background-color: #fedb9a;
+	background-color: #f2f2f2;
 	position: relative;
 	display: inline-block;
 	height: 430px;
