1.카테고리 페이지 카테고리명과 키워드가 일치하는 작가만 띄우는거 기능 완료
2.관리자 신고하기 문의하기 페이지 UI 통일시키는 작업및 전체적 수정

3.관리자 문의하기 페이지 첨부파일 있을때와 없을때 UI 처리

--- a/src/main/webapp/resources/css/admin_accuse.css
+++ b/src/main/webapp/resources/css/admin_accuse.css
@@ -1,10 +1,17 @@
 @charset "UTF-8";
 /* admin_accuse.jsp */
-.admin_ac_title{
-	margin-left: 50px;
+.admin_acc_title{
+	margin-left: 55px;
 }
 .adm_accuse_count{
 	padding-bottom:15px;
+}
+.admin_acc_main{
+	display: flex;
+    justify-content: center;
+    min-height: 400px;
+    width: 800px;
+    margin: 0 auto;
 }
 .admin_ac_main{
 	display: flex;
@@ -14,8 +21,8 @@
     margin: 0 auto;
 }
 #adm_accuse_table{
-	margin:auto;
 	width:800px;
+	font-size:12px;
 }
 #ac_cont_td{
    overflow: hidden;
@@ -44,7 +51,6 @@
 }
 .ac_adm_tr{
 	cursor:pointer;
-	font-size:14px;
 }
 .ac_adm_tr:hover{
 	background-color:aliceblue;
