--- a/src/main/webapp/resources/css/admin_inquire_info.css
+++ b/src/main/webapp/resources/css/admin_inquire_info.css
@@ -3,6 +3,8 @@
 /* admin_inquire_info */
 .adm_inq_file{
 	width:900px;
+	border-top:0px;
+	font-size:14px
 }
 .inq_file_down{
 	margin-left:10px;
@@ -10,9 +12,11 @@
 }
 .adm_inq_table{
 	width:900px;
+	font-size:14px;
 }
 .inq_adm_table2{
 	width:900px;
+	font-size:14px;
 }
 .inq_button{
 	width:65px;
@@ -23,11 +27,13 @@
     cursor:pointer;
     margin:0 3px;
     margin-top:10px;
+    font-size:14px;
 }
 #inq_adm_button{
 	margin:10px 0;
 	display:flex;
 	justify-content:flex-end;
+	font-size:14px;
 }
 #inq_adm_remail{
 	width: 870px;
@@ -36,17 +42,20 @@
 	resize: none;
 	border: 1px solid black;
 	float:left;
-
+	font-size:14px;
 }
 #inq_request_btn{
 	margin-left:832px;
 	margin-top:20px;
+	font-size:14px;
 }
 .inq_adm_request{
 	display:none;
+	font-size:14px;
 }
 #inq_del_btn{
 	margin-right:20px;
+	font-size:14px;
 }
 
 
@@ -94,26 +103,35 @@ color:transparent;
     width: 900px;
     margin: 0 auto;
     margin-top:60px;
+    font-size:14px;
 }
 #inq_adm_complete{
     width: 900px;
    	margin-top:100px;
+   	font-size:14px;
 }
 #adm_inq_replyname{
-
+	font-size:14px;
 	}
 #adm_inq_field{
+	font-size:14px;
+	vertical-align: top;
+	text-align: left;
+	padding: 0px 15px;
 }
 .inq_adm_retime{
 	padding-bottom:15px;
 	background-color:white;
+	font-size:14px;
 }
 .adm_table_div{
 	border:1px solid black;
+	font-size:14px;
 }
 .inq_adm_readmin{
 	background-color:white;
 	border:0px;
+	font-size:14px;
 }
 table{
 	border-collapse: separate;
@@ -121,13 +139,15 @@ table{
     text-align: center;
     line-height: 1.5;
     margin: auto auto;
+    border-collapse: collapse;
+    border-color: gray;
+    font-size:14px;
 }
 table th{
 	font-weight: bold;
-	color:#fff;
-	background:#ce4869;
+	color:black;
+	background:aliceblue;
 }
 table td{
-	border-bottom: 1px solid #ccc;
-    background: #eee;
+    background: white;
 }
