로그인 안되어있으면 책 만들기 접속 못하게 바꿈 최신 글 상단에 카테고리랑 책 달고 jquery ajax 다이어트 시킴 내 아이디 작가로 등업시킴

--- a/src/main/webapp/resources/css/new_post.css
+++ b/src/main/webapp/resources/css/new_post.css
@@ -9,16 +9,36 @@ ul li {
 	list-style: none;
 }
 
+.new_post_cont_catbook{
+	height: 17px;
+	display:flex;
+	justify-content: flex-start;
+	margin-bottom: 5px;
+	font-size: 13px;
+	font-family: 'NanumMyeongjo','serif';
+	font-weight: bold;	
+}
+
+.new_post_cont_cat{
+	margin-right: 10px;
+	color: #ff8040;
+	text-decoration: none;
+}
+
+.new_post_cont_cat:hover{
+	text-decoration: underline;
+}
+
+.new_post_cont_book{
+	color: #e0849d;
+}
+
 #new_post_title {
 	font-family: 'NanumMyeongjo','serif';
 	font-size: 45px;
 	text-align: center;
 	font-weight: bold;
 	border-bottom: 1px solid #ededed;
-}
-
-#new_post_maintt {
-	
 }
 
 #new_post_contents {
@@ -46,10 +66,24 @@ ul li {
 	line-height: 1.6em;
 }
 
+#new_post_loading_cont_text.new_post_no_img_text{
+	width: 800px;
+}
+
 #new_post_loading_cont_text_title {
 	font-family: 'NanumMyeongjo','serif';
 	font-size: 25px;
 	padding: 20px 0;
+}
+
+#new_post_loading_cont_text_cont {
+	display: inline-block;
+	width: 600px;
+	padding:0;
+}
+
+#new_post_loading_cont_text_cont.new_post_no_img_cont{
+	width: 800px;
 }
 
 #new_post_loading_cont_text_writer {
