--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -260,11 +260,11 @@ body{
 .cat_book_img{
 	width:260px;
 	height:390px;
-	filter: brightness(50%);
+	filter: brightness(80%);
 }
 .cat_book_title{
 	height:75px;
-	color: #959595;
+	color: #3d3d3d;
 	font-size: 16px;
 	margin-top:45px;
 	text-align:center;
@@ -274,8 +274,14 @@ body{
     font-size:12px;
     font-weight:bold;
     position: absolute;
-    transform: translateY(220px);
-    color:#FFF;
+    color:#3d3d3d;
+    transform: translateX(-50%);
+    top: 75%;
+    left: 50%
+}
+.cat_story_writer i{
+	font-family: "NanumMyeongjo","serif";
+/* 	color:#ff8040; */
 }
 .cat_book_inner{
 	width:150px;
@@ -297,6 +303,7 @@ body{
     line-height: 18px;
     color: #fff;
     text-align: center;
+    text-shadow: 0 0 3px #333;
 }
 .cat_inner_line{
 	width: 11px;
