--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -112,8 +112,8 @@ body{
 	color:#333;
 	text-decoration:none;
 	font-size:12px;
-	text-align:left;
-	margin-left:72px;
+	margin:0px auto;
+	line-height:20px;
 }
 #cat_writer_list1{
 	background-color: #FFF;
