--- a/src/main/webapp/resources/css/feed.css
+++ b/src/main/webapp/resources/css/feed.css
@@ -198,14 +198,32 @@
     margin: 10px -16px;
     padding: 0;
 }
+
+.feed_scrap_like_inner:hover .feed_scrap_sym_img{
+	width:22px;
+	height:22px;
 }
-.feed_scrap_like_inner:hover{
-}
-.feed_scrap_like_inner:active .feed_scrap_like_img{
+.feed_scrap_like_inner:active .feed_scrap_sym_img{
 	width:19px;
 	height:19px;
 }
-.feed_scrap_like_img{
+
+.feed_scrap_like_inner:hover .feed_scrap_rec_img{
+	width:22px;
+	height:22px;
+}
+.feed_scrap_like_inner:active .feed_scrap_rec_img{
+	width:19px;
+	height:19px;
+}
+
+.feed_scrap_sym_img{
+	cursor: pointer;
+	width:20px;
+	height:20px;
+	background-color: rgb(245,124,104);
+}
+.feed_scrap_rec_img{
 	cursor: pointer;
 	width:20px;
 	height:20px;
@@ -229,6 +247,14 @@
 }
 
 
+.feed_scrap_no_info{
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    font-size: 20px;
+    font-weight: bold;
+}
 
 
 
