--- a/src/main/webapp/resources/css/new_book.css
+++ b/src/main/webapp/resources/css/new_book.css
@@ -204,12 +204,14 @@
 }
 
 .new_book_banner_book_image .book_image {
-	max-width: 240px;
+	width: 240px;
+	height: 340px;
 }
 
 .new_book_banner_book_image img {
-	max-height: 340px;
 	width: 100%;
+	height: 100%;
+	object-fit:cover;
 	vertical-align: bottom;
 }
 
