--- a/src/main/webapp/resources/css/profile.css
+++ b/src/main/webapp/resources/css/profile.css
@@ -113,12 +113,28 @@ ul.profile_keyword_link{
 .pf_post_date{
     font-size: 13px;
 }
+.non_writing{
+	min-height: calc(100vh - 480px);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
 .profile_article_main{
 	display : flex;
 	font-size: 13px;
 	font-weight: bold;
-	color:  #ff8040;
     padding-bottom: 10px;
+    height: 17px;
+    justify-content: flex-start;
+}
+.profile_cat_color{
+	color:  #ff8040;
+	margin-right: 10px;
+	
+}
+.profile_book_color{
+	    color: #e0849d;
 }
 .pf_bo_title{
     opacity: 0.7;
@@ -159,17 +175,10 @@ ul.profile_keyword_link{
   	cursor: pointer;
 }
 .lock{
-	background: url(../img/lock.png) no-repeat;
-    background-size: 25px;
-    background-position: 50%;
     position: relative;
 }
 .unlock{
-	background: url(../img/unlock.png) no-repeat;
-    background-size: 25px;
-    background-position: 50%;
     position: relative;
-	
 }
 
 /*	profile 	*/
@@ -335,7 +344,20 @@ ul.profile_keyword_link{
 		margin-bottom: 5px;
 		padding-left: 0;
 		margin-top: 0;
+		min-height: 150px;
+}
+.profile_none{
+	min-height: calc(100vh - 575px);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        font-size: 20px;
+    opacity: 0.6;
 }	
+.m_right{
+	margin: 0 0 0 -10px;
+}
 .profile_writer_list li{
 	padding: 20px 0 20px;
 	border-bottom: 1px solid #eee; 
@@ -714,7 +736,6 @@ span.del_btn {
 	
 	}
 	.profile_edit_btn1{
-	margin: 0 5px;
 	    outline: none;
     border: 1px solid;
     background: white;
