--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -161,21 +161,43 @@ body a {
 	background-position-y :40%;
 }
 
-#edit_del_wrap .user_del_recover_btn {
+#edit_del_wrap .admin_art_del_btn {
+	background:url(../img/readpage_icon/del_off.png);
+	background-repeat:no-repeat;
+	background-position-x :50%;
+	background-position-y :40%;
+}
+
+#edit_del_wrap .admin_art_del_btn:hover{
+	background:url(../img/readpage_icon/del_on.png);
+	background-repeat:no-repeat;
+	background-position-x :50%;
+	background-position-y :40%;
+}
+
+#edit_del_wrap .admin_art_del_btn:active{
+	background:url(../img/readpage_icon/del_on.png);
+	background-repeat:no-repeat;
+	background-size:25px 25px;
+	background-position-x :50%;
+	background-position-y :40%;
+}
+
+#edit_del_wrap .admin_art_del_recover_btn {
 	background:url(../img/unblock.png);
 	background-repeat:no-repeat;
 	background-position-x :50%;
 	background-position-y :40%;
 }
 
-#edit_del_wrap .user_del_recover_btn:hover{
+#edit_del_wrap .admin_art_del_recover_btn:hover{
 	background:url(../img/unblock_on.png);
 	background-repeat:no-repeat;
 	background-position-x :50%;
 	background-position-y :40%;
 }
 
-#edit_del_wrap .user_del_recover_btn:active{
+#edit_del_wrap .admin_art_del_recover_btn:active{
 	background:url(../img/unblock_on.png);
 	background-repeat:no-repeat;
 	background-size:25px 25px;
