--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -186,23 +186,22 @@ body a {
 #edit_del_wrap .admin_art_del_recover_btn {
 	background:url(../img/unblock.png);
 	background-repeat:no-repeat;
-	background-position-x :50%;
-	background-position-y :40%;
+	background-size: 25px;
+    background-position: center;
 }
 
 #edit_del_wrap .admin_art_del_recover_btn:hover{
 	background:url(../img/unblock_on.png);
 	background-repeat:no-repeat;
-	background-position-x :50%;
-	background-position-y :40%;
+	background-size: 25px;
+    background-position: center;
 }
 
 #edit_del_wrap .admin_art_del_recover_btn:active{
 	background:url(../img/unblock_on.png);
 	background-repeat:no-repeat;
-	background-size:25px 25px;
-	background-position-x :50%;
-	background-position-y :40%;
+	background-size: 25px;
+    background-position: center;
 }
 /*작가 프로필*/
 
