경고창(alert) 커스텀 적용 (Sweetalert2 API) => 컨트롤러 alert 전체 수정 UI 부분 수정 ( 회원가입, 회원수정, 관리자 UI부분 )

--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -15,6 +15,7 @@ body{
 	margin-top: 37px;
 }
 #cat_title_name{
+	font-family:"NanumMyeongJo";
 	width:200px;
 	height:60px;
 	font-size: 31px;
@@ -75,6 +76,7 @@ body{
 	margin-bottom: 100px;
 }
 #cat_writer_title{
+	font-family:"NanumMyeongJo";
 	height: 42px;
 	width:910px;
 	font-size:24px;
