--- a/src/main/webapp/resources/css/member_modify.css
+++ b/src/main/webapp/resources/css/member_modify.css
@@ -60,22 +60,21 @@
     font-size: 10px;
 }
 #member_pwd_modify:active{
-	background-color: orange;
+	background-color: #000;
 	color: white;
 }
 .hide_box{
 	display: none;	
 }
 #member_modify_pwd_modify{
-	border: 2px solid orange;
-    background-color: #fff;
-    cursor: pointer;
-    padding: 9px;
-    outline: 0;
-	
-	
+	border: 1px solid #000;
+	background-color: #fff;
+	cursor: pointer;
+	border-radius: 25px;
+	padding: 5px 13px;
+	outline: 0;
 }
-#member_modify_pwd_modify:hover{
+#member_modify_pwd_modify:active{
 	background-color: orange;
 	color: white;
 }
@@ -89,7 +88,7 @@
 	text-align: left;
 	padding-left:15px;
 	padding-bottom:5px;
-	border-bottom:1px solid orange;
+	border-bottom: 1px solid #000;
 }
 
 .member_modify_text.birth{
@@ -101,7 +100,7 @@
 	border-top: none;
 	text-align: left;
 	padding-left:15px;
-	border-bottom:1px solid orange;
+	border-bottom: 1px solid #000;
 	padding-bottom:5px;
 	font-size : 14px;
 }
@@ -115,7 +114,7 @@
 	border-top: none;
 	text-align: left;
 	padding-left:15px;
-	border-bottom:1px solid orange;
+	border-bottom: 1px solid #000;
 	padding-bottom:5px;
 	font-size : 14px;
 }
@@ -128,7 +127,7 @@
 	border-right: none;
 	border-top: none;
 	text-align: left;
-	border-bottom:1px solid orange;
+	border-bottom: 1px solid #000;
 	padding-bottom:5px;
 	font-size : 14px;
 	font-family: verdana;
@@ -212,14 +211,15 @@
     width: 110px;
     height: 40px;
     background-color: white;
-    border: solid 2px orange;
+    border: solid 1px #000;
     outline: 0;
+    border-radius: 25px;
     cursor: pointer;
     margin-bottom: 30px;
-    font-size: 10px;
+    font-size: 15px;
 }
-#member_modify_next_btn:hover{
-	background-color: orange;
+#member_modify_next_btn:active{
+	background-color: #000;
 	color: white;
 }
 .member_modify_error {
