jsp 스크립트 alert 변경 ( form false 시키는 alert는 form 실행시 바로 새로고침 / 실행되서 변경 alert로 처리가 불가능 ) javascript 파일 alert 변경 ( 바뀐부분 있으니 체크, 각자 기능에 대해 확인 바람 )

--- a/src/main/webapp/resources/css/my_info.css
+++ b/src/main/webapp/resources/css/my_info.css
@@ -195,7 +195,7 @@ margin: 0 10px;
     outline: none;
 }
 #my_info_layerLeave{
-	z-index:1000000000;
+	z-index:10021;
 	position:fixed;
 	top:0;
 	left:0;
