--- a/src/main/webapp/resources/css/profile.css
+++ b/src/main/webapp/resources/css/profile.css
@@ -159,20 +159,21 @@ ul.profile_keyword_link{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     width: 500px;
+    
+    
 }
 .article_cont p{
 	padding: 0 0 0 15px;
 	
 }
 .private{
-	float: right;
-    margin: 3px 0px;
+    margin: -25px -22px;
     background: transparent;
     outline: none;
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
     border: none;
-  	cursor: pointer;
+    cursor: pointer;
 }
 .lock{
     position: relative;
@@ -478,12 +479,9 @@ ul.profile_keyword_link{
 	color: #555;
 }
 .relate{
-background: url(../img/relate.png) no-repeat;
-    background-size: 11px;
-    height: 20px;
+    height: 12px;
     width: 12px;
-    background-position: 0px 9px;
-    display: block;
+    display: inline-block;
 }
 .article_icon{
 background: url(../img/article.png) no-repeat;
