--- a/src/main/webapp/resources/css/new_book.css
+++ b/src/main/webapp/resources/css/new_book.css
@@ -196,11 +196,29 @@
 }
 
 .new_book_banner_book_image .border_left {
-	width: 8px;
+	width: 11px;
 	height: 100%;
-	background: #000;
 	position: absolute;
-	opacity: 0.03;
+}
+
+.new_book_banner_book_image .border_left:before {
+	width: 1px;
+	height: 100%;
+	content: '';
+	background: RGBA(0, 0, 0, 0.05);
+	right: 2px;
+	top: 0;
+	position: absolute;
+}
+
+.new_book_banner_book_image .border_left:after {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 2px;
+	height: 100%;
+	background: rgba(255, 255, 255, .1);
+	content: '';
 }
 
 .new_book_banner_book_image .book_image {
@@ -211,10 +229,62 @@
 .new_book_banner_book_image img {
 	width: 100%;
 	height: 100%;
-	object-fit:cover;
+	object-fit: cover;
 	vertical-align: bottom;
+	box-shadow: 12px 11px 7px #636569;
+	border-radius: 2px 6px 6px 2px;
 }
 
+.new_book_banner_book_cont {
+	position: absolute;
+	display: inline;
+	text-align: center;
+	height: 400px;
+	width: 280px;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+.new_book_banner_book_cont_top {
+	height: 190px;
+	margin: 0px 61px;
+	margin-top: 72px;
+	background: #ffffffe0;
+	color: #333;
+}
+
+.new_book_banner_book_cont_top strong {
+	font-family: 'NanumMyeongjo', 'serif';
+	display: table-cell;
+	vertical-align: middle;
+	width: 160px;
+	margin: 0;
+	padding: 0 10px;
+	font-size: 19px;
+	height: 160px;
+}
+
+.new_book_banner_book_cont_top i {
+	display: block;
+	margin: 0;
+	padding: 0 15px;
+	height: 30px;
+	font-size: 12px;
+	font-style: normal;
+	line-height: 30px;
+}
+
+.new_book_banner_book_cont_bottom {
+	display: block;
+	height: 40px;
+	margin: 0;
+	padding: 0 15px;
+	padding-top: 46px;
+	font-size: 14px;
+	color: #fff;
+	font-weight: bold;
+	text-shadow: 0 0 3px #333;
+}
 /* 최신 책 리스트 */
 #gradeItemList_all {
 	list-style: none;
@@ -410,9 +480,26 @@
 	position: absolute;
 	width: 8px;
 	height: 100%;
-	background: #000;
+}
+
+.item_work .new_book_item_work_cover .border_left:before {
+	width: 1px;
+	height: 100%;
+	content: '';
+	background: RGBA(0, 0, 0, 0.05);
+	right: 2px;
 	top: 0;
-	opacity: 0.03;
+	position: absolute;
+}
+
+.item_work .new_book_item_work_cover .border_left:after {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 2px;
+	height: 100%;
+	background: rgba(255, 255, 255, .1);
+	content: '';
 }
 
 .button:active {
@@ -598,9 +685,26 @@
 	position: absolute;
 	width: 6px;
 	height: 100%;
-	background: #000;
+}
+
+.new_book_inner_info .new_book_desc .border_left:before {
+	width: 1px;
+	height: 100%;
+	content: '';
+	background: RGBA(0, 0, 0, 0.05);
+	right: 2px;
 	top: 0;
-	opacity: 0.03;
+	position: absolute;
+}
+
+.new_book_inner_info .new_book_desc .border_left:after {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 2px;
+	height: 100%;
+	background: rgba(255, 255, 255, .1);
+	content: '';
 }
 
 .new_book_inner_info .new_book_desc .new_book_share_sentence {
