<수정> 글수정 - 진입분기문 수정 카테고리 - 프로필사진, 북 이미지 수정

--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -262,6 +262,7 @@ body{
 .cat_book_img{
 	width:260px;
 	height:390px;
+	object-fit: cover;
 	filter: brightness(80%);
 }
 .cat_book_title{
@@ -311,7 +312,7 @@ body{
 	width: 11px;
     position: absolute;
     top: 0;
-    left: 18px;
+    left: 11px;
     height: 100%;
 }
 .cat_inner_line:after {
