--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -30,11 +30,20 @@ body a {
 }
 .write_article_info_bottom{
 	font-size:12px;
-	transform:translateY(30px);
+	font-size: 12px;
+    position: absolute;
+    transform: translateY(250px);
+    bottom: 0px;
+    left: 20%;
 }
 .write_article_info_center{
 	font-size:12px;
-	transform:translateY(140px);
+	position: absolute;
+    font-size: 12px;
+    transform: translateY(250px);
+    bottom: 0px;
+    right: 45%;
+	
 }
 .write_article_by{
 	font-style:italic;
