1. 카테고리 페이지 기능 수정및 UI 업데이트 2.문의하기 페이지 텍스트필드 오류 수정 3.관리자 문의하기 신고하기 페이지 UI 수정

--- a/src/main/webapp/resources/css/admin_accuse.css
+++ b/src/main/webapp/resources/css/admin_accuse.css
@@ -36,7 +36,6 @@
    height: 22px;
 }
 .ac_list_underline {
-	border-bottom: .5px dotted gray;
 	padding: .5em .2em;
 }
 #ac_paging {
@@ -51,6 +50,7 @@
 }
 .ac_adm_tr{
 	cursor:pointer;
+	border-bottom: .5px solid #d1d1d1;
 }
 .ac_adm_tr:hover{
 	background-color:aliceblue;
