--- a/src/main/webapp/resources/css/admin_inquire.css
+++ b/src/main/webapp/resources/css/admin_inquire.css
@@ -15,7 +15,6 @@
 	padding-bottom:15px;
 }
 .inq_list_underline {
-	border-bottom: .5px dotted gray;
 	padding: .5em .2em;
 }
 #inq_paging {
@@ -33,6 +32,7 @@
 }
 .inq_adm_tr{
 	cursor:pointer;
+	border-bottom: .5px solid #d1d1d1;
 }
 .inq_adm_tr:hover{
 	background-color:aliceblue;
@@ -60,5 +60,5 @@
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    line-height: 24px;
-   height: 22px;
+   height: 16px;
 }
