--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -2,7 +2,8 @@
 /* Category.jsp */
 
 body{
-	background-color: #fbfbfb;
+	background-color: #fafafa;
+	min-height: 100vh;
 }
 
 #cat_empty{
@@ -10,24 +11,57 @@ body{
 	height:auto;
 	text-align:center;
 	margin:0 auto;
-	background-color: #FBFBFB;
+	background-color: #FAFAFA;
 	margin-bottom:100px;
 	margin-top: 37px;
 }
+@-webkit-keyframes sparkle {
+  from {
+    background-position: 0% 100%;
+  }
+  to {
+    background-position: 200% 100%;
+  }
+}
+@keyframes sparkle {
+  from {
+    background-position: 0% 100%;
+  }
+ to {
+    background-position: 200% 100%;
+  }
+}
 #cat_title_name{
-	font-family:"NanumMyeongJo";
-	width:200px;
-	height:60px;
-	font-size: 31px;
-	border:0px solid 3d3d3d;
-	text-align:center;
-	margin:0px auto;
-	vertical-align:middle;
-	padding-top:20px;
-	color: #666;
-	font-weight:700;
-	margin-top: 10px;
-	margin-left: 359px;
+  background: white;
+  display: inline-block;
+  border-radius: 4px;
+  position: relative;
+  font-size: 31px;
+  color: #666;
+  font-weight:700;
+  margin-top: 10px;
+  margin-left: 359px;
+  text-align:center;
+  margin:0px auto;
+  vertical-align:middle;
+  
+}
+#cat_title_name:before{
+  -webkit-animation: sparkle 4s infinite linear;
+  animation: sparkle 4s infinite linear;
+  background: linear-gradient(90deg, #7FEFBD 0%, #FFF689 11%, #EC0B43 22%, #7FEFBD 33%, #FFF689 44%, #EC0B43 55%, #7FEFBD 66%, #FFF689 77%, #EC0B43 88%, #7FEFBD 100%);
+  background-size: 300% 100%;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: -4px;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  -webkit-filter: blur(3px);
+  filter: blur(3px);
+  z-index: -1;
+  -webkit-transform: scale(0.99) translateY(3px);
 }
 .cat_write_top{
 	text-decoration:none;
@@ -39,13 +73,13 @@ body{
 	margin-top:10px;
 	text-decoration:none;
 	font-size:14px;
-	color:#333;
+	color:#666;
 }
 .cat_face_img{
 	width:50px;
 	height:50px;
 	border-radius:50%;
-	border:1px solid #000000;
+	border:1px solid #ddd;
 	justify-content:center;
 	margin:0 auto;
 	margin-top:10px;
@@ -57,8 +91,8 @@ body{
 	margin-top:3px;
 	border-radius:25px;
 	background-color:transparent;
-	color:#3d3d3d;
-	border: 1px solid #F57C68;
+	color:#9d9a9a;
+	border: 1px solid #ddd;
 	font-size: 11px;
 	outline: none;
 	cursor: pointer;
@@ -71,24 +105,25 @@ body{
 	height:250px;
 	min-height:200px;
 	border:0px solid #333;
-	color:#FBA621;
+	/*color:#FBA621;*/
 	margin-top:30px;
 	margin-bottom: 100px;
 }
 #cat_writer_title{
 	font-family:"NanumMyeongJo";
+	font-weight:bold;
 	height: 42px;
 	width:910px;
-	font-size:24px;
+	font-size:26px;
 	text-align:left;
-	margin:0px auto;
+	margin:0px 0px;
 	vertical-align:middle;
-	color:#ffffff;
+	color:#000000;
 	text-decoration:none;
-	background-color:#F57C68;
+	background-color:#ffffff;
 	border:0px;
 	align:center;
-	padding-left:20px;
+	padding-left:3px;
 	margin-top: 5px;
 	line-height: 42px;
 }	
@@ -102,7 +137,7 @@ body{
 	margin-top:10px;
 	width:120px;
 	height:20px;
-	color:#333;
+	color:#bbb;
 	text-decoration:none;
 	font-size:12px;
 	text-align: center;
@@ -111,7 +146,7 @@ body{
 #cat_sub_count{
 	width:120px;
 	height:20px;
-	color:#333;
+	color:#bbb;
 	text-decoration:none;
 	font-size:12px;
 	margin:0px auto;
@@ -122,10 +157,14 @@ body{
 	width: 220px;
 	height:200px;
 	margin: 10px 5px;
-	border:1px solid #FBA621;
 	justify-content:center;
 	text-decoration: none;
 	margin-left: px;
+	border:1px solid white;
+}
+#cat_writer_list1:hover{
+	border:1px solid #ffad86;
+	color:#ffad86;
 }
 .cat_writing_block{
 	width:940px;
@@ -198,7 +237,7 @@ body{
 	z-index:3;
 	background-color:transparent;
 	color:#efefef;
-	border:1.5px solid #F57C68;
+	border:1.5px solid #bbb;
 	padding:4px 10px;
 	margin-top:15px;
 	cursor:pointer;
@@ -276,9 +315,9 @@ body{
     font-size:12px;
     font-weight:bold;
     position: absolute;
-    color:#3d3d3d;
+    color:#ffffff;
     transform: translateX(-50%);
-    top: 75%;
+    top: 90%;
     left: 50%
 }
 .cat_story_writer i{
