--- a/src/main/webapp/resources/css/profile.css
+++ b/src/main/webapp/resources/css/profile.css
@@ -167,11 +167,11 @@ ul.profile_keyword_link{
 	
 }
 .private{
-    margin: -25px -22px;
+    margin: 0px 5px 0 0;
     background: transparent;
     outline: none;
-    height: 20px;
-    width: 20px;
+    height: 18px;
+    width: 18px;
     border: none;
     cursor: pointer;
 }
@@ -383,6 +383,7 @@ ul.profile_keyword_link{
 .author_intro{
 	line-height: 1.5;
     padding-bottom: 10px;
+    white-space: normal;
 }
 #article{
 	     padding-left: 25px; 
@@ -509,7 +510,6 @@ background: url(../img/article.png) no-repeat;
 #profile_main_edit{
 	min-height: calc(100vh - 50px);
 	background: 	snow;
-	padding-bottom : 100px;
 }
 #edit_text{
 	padding: 10px 0px;
@@ -537,13 +537,16 @@ padding: 10px;
 	line-height:1.2;
 	position: relative; 
 	width:700px;
-	min-width: 700px; 
+	min-width: 700px;
+	min-height :350px; 
 	height: auto;
 	padding: 15px 30px;
 	margin-left:50%; margin-right:50%;
+	margin-bottom: 100px;
 	transform: translate(-50%);
 	background: #fff;
 	border:  1px solid  #eee;
+	    
 }
 .profile_font_hide{
 	overflow: hidden;
