<수정 / 추가> 작가 제안 - 비로그인 작가제안시 로그인 후 이동페이지를 이전페이지로 인식
책발간 페이지
- 책 발간전에 주의사항이 4초동안 떠있다가 사라지게 제작
- 이후 경고표시에 hover시에 다시 확인 가능

검색
- 글 검색시에 책에 포함된 글이라면 book을 클릭하여 글 상세페이지로 이동가능

글읽기
- header에 카테고리 & book 표시
- 해당 카테고리 페이지 혹은 책 상세페이지로 이동 가능

문의페이지
- 이메일 검증 확실하게 (@ . 이 없으면 진행막음)
- 전화번호 검증확실하게 (전화번호 9글자 이상만 통과)

로그인
- 로그인시 엔터쳐서 로그인하면 로그인 확인 문구 뜨는 현상 교정

메인
- 추천책란 버튼 클릭시 빠르게 돌아가버리던 현상 수정

공지사항(사용자)
- 글쓴이 검색란 삭제
메인, 검색, 카테고리 페이지의 책
- 겉표지가 없을경우 null값으로 이미지 추가

--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -37,10 +37,46 @@ a {
 	width:25px;
 	height:25px;
 	object-fit:cover;
+	cursor: pointer;
+}
+
+#book_create_anno_img:hover ~#book_create_anno_cont{
+	display:inline;
+	opacity:1;
 }
 
 #book_create_anno_cont{
-	
+    cursor: default;
+    padding: 7px;
+    position: relative;
+    width: 730px;
+    bottom: 50px;
+    z-index: 10;
+    font-size: 14px;
+    background-color:#f9cc5bde;
+ 	opacity:0;
+ 	display:inline;
+    -webkit-transition:display 1s, opacity 1s;
+    transition:display 1s, opacity 1s;
+    animation-name: anno;
+  	animation-duration:4s;
+}
+
+@-webkit-keyframes anno{
+  0% {
+    opacity:1;
+  }
+  80%{
+  	opacity:1;
+  }
+  100% {
+    opacity:0;
+  }
+}
+
+#book_create_anno_cont span{
+	display:inline-block;
+	line-height: 22px;
 }
 
 #book_create_info {
