--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -316,7 +316,7 @@ body{
     font-size:12px;
     font-weight:bold;
     position: absolute;
-    color:#ffffff;
+    color:#3d3d3d;
     transform: translateX(-50%);
     top: 90%;
     left: 50%
