--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -103,6 +103,50 @@ body{
 	margin-top: 2px;
 }
 
+#head-menu-readpage-info{
+	display: flex;
+    align-items: center;
+	height: 55px;
+    line-height: 55px;
+    padding-top: 5px;
+    min-width: 150px;
+    margin-left: 53px;
+    font-family: 'NanumMyeongjo','serif';
+}
+
+#head-menu-readpage-cat{
+    color: #ff8040;
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 10px;
+    border: 1px solid #ff8040;
+    border-radius: 23px;
+    padding: 2px 8px;
+    line-height: 19px;
+}
+
+#head-menu-readpage-cat:hover{
+	color: #fff;
+	background-color: #ff8040;	
+}
+
+#head-menu-readpage-booklink{
+	color: #e0849d;
+    font-size: 15px;
+    font-weight: bold;
+    height: 30px;
+    margin-top: 0px;
+    padding-top: 0px;
+    line-height: 30px;
+}
+#head-menu-readpage-booklink:hover{
+	text-decoration: underline;
+}
+
+#head-menu-readpage-empty{
+	width: calc(50vw - 428px);
+}
+
 #head-menu-lock{
 	height:30px;
 	margin-right:25px;
