--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -44,6 +44,7 @@ body{
   text-align:center;
   margin:0px auto;
   vertical-align:middle;
+  font-family:"NanumMyeongJo";
   
 }
 #cat_title_name:before{
@@ -122,7 +123,7 @@ body{
 	text-decoration:none;
 	background-color:#ffffff;
 	border:0px;
-	align:center;
+	text-align:center;
 	padding-left:3px;
 	margin-top: 5px;
 	line-height: 42px;
