index, header 관리자 글쓰기 버튼 제거, 통계자료 버튼 추가 통계자료 3가지 삽입 ( 성비, 연령별 추이, 게시글 잠금 추이 ) JSONObject 사용 위한 jsom-simple 라이브러리 추가, 통계 카운트 확인용 VO (DTO) 추가 각 멤버, 보드에 추가 됨

--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -29,21 +29,20 @@ body a {
 	filter:brightness(0.7);
 }
 .write_article_info_bottom{
-	font-size:12px;
-	font-size: 12px;
+	width: 700px;
+    font-size: 12px;
     position: absolute;
-    transform: translateY(250px);
+    transform: translate(50%,250px);
     bottom: 0px;
-    left: 20%;
+    right: 50%;
+    text-align: left;
 }
 .write_article_info_center{
-	font-size:12px;
 	position: absolute;
     font-size: 12px;
-    transform: translateY(250px);
+    transform: translate(50%,250px);
     bottom: 0px;
-    right: 45%;
-	
+    right: 50%;	
 }
 .write_article_by{
 	font-style:italic;
