--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -50,7 +50,7 @@ body{
 #cat_title_name:before{
   -webkit-animation: sparkle 4s infinite linear;
   animation: sparkle 4s infinite linear;
-  background: linear-gradient(90deg, #7FEFBD 0%, #FFF689 11%, #EC0B43 22%, #7FEFBD 33%, #FFF689 44%, #EC0B43 55%, #7FEFBD 66%, #FFF689 77%, #EC0B43 88%, #7FEFBD 100%);
+ /* background: linear-gradient(90deg, #7FEFBD 0%, #FFF689 11%, #EC0B43 22%, #7FEFBD 33%, #FFF689 44%, #EC0B43 55%, #7FEFBD 66%, #FFF689 77%, #EC0B43 88%, #7FEFBD 100%); */
   background-size: 300% 100%;
   content: '';
   position: absolute;
@@ -115,7 +115,7 @@ body{
 	height: 42px;
 	width:940px;
 	font-size:26px;
-	margin:0px 0px;
+	margin:10px 0px;
 	vertical-align:middle;
 	color:#000000;
 	text-decoration:none;
@@ -129,6 +129,7 @@ body{
 	justify-content:space-between;
 	text-decoration:none;
 	text-align: center;
+	margin-bottom:50px;
 }
 #cat_write_count{
 	margin-top:10px;
@@ -151,21 +152,22 @@ body{
 }
 #cat_writer_list1{
 	position: relative;
-  padding: 1em 1.5em;
   border: none;
   background-color: transparent;
   cursor: pointer;
   outline: none;
-  font-size: 18px;
+  font-size: 16px;
   margin: 1em 0.8em;
+  width:220px;
+  height:200px;
 }
 #cat_writer_list1::after,
 #cat_writer_list1::before{
   position: absolute;
   content: "";
   display: block;
-  width: 20%;
-  height: 20%;
+  width: 5%;
+  height: 5%;
   border: 2px solid;
   transition: all 0.6s ease;
   border-radius: 2px;
@@ -175,16 +177,16 @@ body{
   right: 0;
   border-top-color: transparent;
   border-left-color: transparent;
-  border-bottom-color: #bbb;
-  border-right-color: #bbb;
+  border-bottom-color: #fc4700;
+  border-right-color: #fc4700;
 }
 #cat_writer_list1::before{
-  top: 0;
-  left: 0;
+  top: -5px;
+  left: -5px;
   border-bottom-color: transparent;
   border-right-color: transparent;
-  border-top-color: #bbb;
-  border-left-color: #bbb;
+  border-top-color: #fc4700;
+  border-left-color: #fc4700;
 }
 /*#cat_writer_list1:hover{
 	border:1px solid #ffad86;
@@ -200,7 +202,7 @@ width: 100%;
 	height:auto;
 	justify-content:center;
 	display:flex;
-	margin-top:20px;
+	margin-top:135px;
 	border:0px solid #00ffff;
 	margin-bottom:60px;
 }
@@ -330,7 +332,7 @@ width: 100%;
   outline:none;
 }
 .cat_write_btn:before{
-  content: "";
+  /*content: "";*/
   background-color: rgba(255, 255, 255, 0.5);
   height: 100%;
   width: 3em;
@@ -343,7 +345,7 @@ width: 100%;
   transition: none;
 }
 .cat_write_btn:hover{
-	background-color: #bbb;
+	/*background-color: #bbb;*/
   color: #ddd;
   border-bottom: 4px solid #bbb;
 }
@@ -371,7 +373,7 @@ width: 100%;
   outline:none;
 }
 .cat_book_btn:before{
-  content: "";
+  /*content: ""; */
   background-color: rgba(255, 255, 255, 0.5);
   height: 100%;
   width: 3em;
@@ -384,7 +386,7 @@ width: 100%;
   transition: none;
 }
 .cat_book_btn:hover{
-  background-color: #bbb;
+ /* background-color: #bbb;*/
   color: #ddd;
   border-bottom: 4px solid #bbb;
 }
@@ -482,4 +484,12 @@ width: 100%;
     height: 100%;
     background: rgba(0,0,0,.05);
     content: '';
+}
+.cat_writing_block h3{
+    margin-left: 120px;
+    margin-top: 50px;
+}
+.cat_book_block h3{
+	margin-left: 120px;
+    margin-top: 50px;
 }
