<수정 / 보안> 1. 회원정보수정/카테고리수정 - 정보수정 후 로그인되어있는 session에 변경사항 적용
2. 검색
- 책검색중에 글내용검색까지 되지 않던것 수정
- 검색시 영문 대소문자 구분하지 않고 검색

3. Best
- 한달기간동안 공감수 Top5를 보여줌 (같은 공감수에서는 조회수 순으로 나옴)

4. 메인
- 공감글의 경우 공감수가 10이상만 노출됨
- 추천책의 이미지가 없는경우 나타나는 대체 이미지의 filter제거

5. 책상세
- 추천버튼옆에 추천수가 나타남

6. 문의 / 신고
- 관리자페이지 UI 수정 - 작가신청,제안과 통일
- 검색필드 선택option중에 상세검색란 selected 조건수정(적용 안되고있었음)
- 내부 버튼 모두 통일
- inq_item1 컬럼명 -> inq_item으로 수정 (복합적 사용중이였음)

7. 관리자페이지 전체
- 회원프로필, 글페이지 이동버튼들을 새창에 떠오르도록 수정

8. 로그아웃
- 일반사용자도 로그아웃시에 alert나타남

9. Swetalert2
- alert 창 바깥을 클릭시에 화면이동이 멈추거나 작동하지 않던것을 수정
(내부 기능 추가 : allowOutsideClick: false )

10. 프로필
- 정지,탈퇴회원의 프로필에 접근 가능했던것 오류 수정

11. 카테고리
- 페이지 UI 수정 (추천작가타이틀이 카테고리 타이틀과 구분되지 않던것을 수정)

그외
- BookVO에 recommend 추가가 되어있지 않아 추가시킴
- InquireVO 정리
- 글읽기페이지에서 카테고리,책 버튼 UI수정

--- a/src/main/webapp/resources/css/admin_inquire.css
+++ b/src/main/webapp/resources/css/admin_inquire.css
@@ -36,15 +36,6 @@
 .inq_adm_tr:hover{
 	background-color:aliceblue;
 }
-#search_field{
-	height:24.4px;	
-}
-#search_field_item{
-	height:24.4px;
-}
-#search_field_handling{
-	height:24.4px;
-}
 #adm_inquire_table{
 	font-size:12px;
 	width:800px;
@@ -60,4 +51,7 @@
    -webkit-box-orient: vertical;
    line-height: 24px;
    height: 16px;
+}
+.search_field {
+	margin: 0 5px;
 }
