--- a/src/main/webapp/resources/css/admin_accuse.css
+++ b/src/main/webapp/resources/css/admin_accuse.css
@@ -32,8 +32,8 @@
    display: -webkit-box; 
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
-   line-height: 24px;
-   height: 22px;
+	line-height: 18px;
+    height: 15px;
 }
 .ac_list_underline {
 	padding: .5em .2em;
@@ -54,12 +54,6 @@
 .ac_adm_tr:hover{
 	background-color:aliceblue;
 }
-#search_field{
-	height:24.4px;	
-}
-#search_field_item{
-	height:24.4px;
-}
-#search_field_handling{
-	height:24.4px;
+.search_field {
+	margin: 0 5px;
 }
