--- a/src/main/webapp/resources/css/admin_accuse_info.css
+++ b/src/main/webapp/resources/css/admin_accuse_info.css
@@ -4,14 +4,14 @@
 	width:858px;
 }
 .ac_button{
-	width:65px;
-	border: 1px solid lightgrey;
-    border-radius: 10px;
+    border: 1px solid lightgrey;
+    border-radius: 25px;
     background-color: white;
-    padding: 4px;
-    cursor:pointer;
-    margin:0 3px;
-    margin-top:10px;
+    padding: 5px 13px;
+    cursor: pointer;
+    margin: 0 3px;
+    margin-top: 10px;
+    outline:none;
 }
 .ac_adm_table2{
 	width:900px;
