--- a/src/main/webapp/resources/css/admin_inquire_info.css
+++ b/src/main/webapp/resources/css/admin_inquire_info.css
@@ -19,15 +19,15 @@
 	font-size:14px;
 }
 .inq_button{
-	width:65px;
 	border: 1px solid lightgrey;
-    border-radius: 10px;
+    border-radius: 25px;
     background-color: white;
-    padding: 4px;
-    cursor:pointer;
-    margin:0 3px;
-    margin-top:10px;
-    font-size:14px;
+    padding: 5px 13px;
+    cursor: pointer;
+    margin: 0 3px;
+    margin-top: 10px;
+    font-size: 14px;
+    outline:none;
 }
 #inq_adm_button{
 	margin:10px 0;
