--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -109,30 +109,31 @@ body{
 	height: 55px;
     line-height: 55px;
     padding-top: 5px;
-    min-width: 150px;
+    min-width: 170px;
     margin-left: 53px;
     font-family: 'NanumMyeongjo','serif';
 }
 
 #head-menu-readpage-cat{
-    color: #ff8040;
-    font-size: 12px;
+	color: #ff8040;
+    font-size: 13px;
     font-weight: bold;
     margin-right: 10px;
     border: 1px solid #ff8040;
-    border-radius: 23px;
-    padding: 2px 8px;
-    line-height: 19px;
+    border-radius: 25px;
+    padding: 5px 13px;
+    line-height: 15px;
 }
 
 #head-menu-readpage-booklink{
 	color: #e0849d;
-    font-size: 15px;
+    font-size: 13px;
+    border-radius: 25px;
+    border: 1px solid #e0849d;
     font-weight: bold;
-    height: 30px;
     margin-top: 0px;
-    padding-top: 0px;
-    line-height: 30px;
+    padding: 5px 13px;
+    line-height: 15px;
 }
 
 #head-menu-readpage-empty{
