--- a/src/main/webapp/resources/css/my_info.css
+++ b/src/main/webapp/resources/css/my_info.css
@@ -8,6 +8,7 @@ body{
 	min-width: 100%;
 	min-height:calc(100vh - 162px);
 	text-align: center;
+    margin-bottom: 20px;
 }
 #my_info_main_wrap-2{
 	width: 860px;
