토탈 통계 추가, 일별 방문자수 추가, 회원 선호 카테고리 카운트 추가, 세션리스너 사용을 위한 bean추가, visit테이블 생성

--- a/src/main/webapp/resources/css/statistics.css
+++ b/src/main/webapp/resources/css/statistics.css
@@ -6,3 +6,12 @@
     text-align: center;
     border-bottom: 1px solid #ededed;
 }
+#stat_allCount{
+	text-align: center;
+    font-size: 15px;
+    font-family: "NanumMyeongjo";
+    margin-top:25px;
+}
+#stat_allCount span{
+	margin:10px
+}
