--- a/src/main/webapp/resources/css/joinmembership.css
+++ b/src/main/webapp/resources/css/joinmembership.css
@@ -366,6 +366,9 @@ padding: 5px 13px;
 	float: right;
 	z-index: 0;
 	border: 1px solid gray;
+	background-image: url(../img/profile_logout.png);
+    background-size: cover;
+    background-position: center;
 }
 #join_membership_profile_img_button{
 	position: absolute;
