1. 카테고리 페이지 배경색 수정 !

--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -31,7 +31,7 @@ body{
   }
 }
 #cat_title_name{
-  background: white;
+  background: #fafafa;
   border-radius: 4px;
   position: relative;
   font-size: 31px;
