--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -2,7 +2,7 @@
 
 body {margin:0;	padding:0; background-color:bisque;}
 a:link{text-decoration:none; color:gray;}
-a:active{text-decoration:none;}
+a:active{text-decoration:none; color:GRAY;}
 a:visited{text-decoration:none;}
 a:hover{text-decoration:underline; color:#F57C68;}
 
