댓글 작성자 프로필 클릭시 프로필이동 / 해당 글작성자 댓글에 (작성자) 표시 / sysout 하나 제거 / 메인 by 글씨 itaric 적용

--- a/src/main/webapp/resources/css/m.css
+++ b/src/main/webapp/resources/css/m.css
@@ -687,13 +687,13 @@ body{
 	line-height: 35px;
 }
 
-.book-item-head-inner-cont-top i{
+.book-item-head-inner-cont-top b{
 	display: block;
 	margin:0;
 	padding: 0px 15px;
 	height:40px;
 	font-size:14px;
-	font-style:normal;
+	font-weight:normal;
 	line-height: 40px;
 }
 .book-item-head-inner-cont-bottom{
