--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -409,6 +409,12 @@ body a {
     margin-top: 5px;
     margin-left:2px;
 }
+#comment_writer_reply{
+	border: 1px solid #f69686;
+    font-size: 10px;
+    padding: 1px 5px;
+    border-radius: 25px;
+}
 .write_comment_btn {
 	font-size:14px;
 	position:flex;
