1. 문의하기 페이지 버튼 UI 수정 2. 관리자 문의하기 상세페이지 첨부파일 UI수정

--- a/src/main/webapp/resources/css/admin_inquire_info.css
+++ b/src/main/webapp/resources/css/admin_inquire_info.css
@@ -7,8 +7,18 @@
 	font-size:14px
 }
 .inq_file_down{
-	margin-left:10px;
-	height:30px;
+	border: none;
+    background: none;
+    cursor: pointer;
+    color: blue;
+    text-decoration: underline;
+    margin: 5px 0;
+    padding: 0;
+    outline: none;
+    margin-left: 3px;
+}
+.inq_file_div{
+	height:43px;
 }
 .adm_inq_table{
 	width:900px;
