--- a/src/main/webapp/resources/css/inquire.css
+++ b/src/main/webapp/resources/css/inquire.css
@@ -310,15 +310,17 @@ body{
 	font-size:14px;
 }
 .inq_btn_cs{
-	background: #FBA621;
 	display: inline-block;
     padding: 0 63px;
     line-height: 40px;
     height: 42px;
-    font-size: 15px;
-    color: white;
+    font-size: 13px;
     float:right;
-    border-radius: 0px;
+    border-radius: 25px;
+    border:1px solid orange;
+    background-color:white;
+    cursor:pointer;
+    outline:0;
 }
 .inq_lab_check{
 	vertical-align:text-bottom;
